feat: adding products

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ db.sqlite3
 lojaapp/__pycache__/*
 /apps/categories/__pycache__/*
 /apps/categories/migrations/*
+/apps/products/__pycache__/*
+/apps/products/migrations/*
 .env
