--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ lojaapp/__pycache__/*
 /apps/categories/migrations/*
 /apps/products/__pycache__/*
 /apps/products/migrations/*
+/apps/socialnetworks/__pycache__/*
+/apps/socialnetworks/migrations/*
 .env
