--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,9 @@ lojaapp/__pycache__/*
 /apps/products/migrations/*
 /apps/socialnetworks/__pycache__/*
 /apps/socialnetworks/migrations/*
+/apps/clients/_pycache_/*
+/apps/clients/migrations/*
+/apps/clientesocialnetwork/__pycache__/*
+/apps/clientesocialnetwork/migrations/*
+
 .env
