fix: adding git ignore folders

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ lojaapp/__pycache__/*
 /apps/clients/migrations/*
 /apps/clientesocialnetwork/__pycache__/*
 /apps/clientesocialnetwork/migrations/*
+/apps/orders/__pycache__/*
+/apps/orders/migrations/*
 
 .env
